[package]
name = "pog-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.130"
serde_json = "1.0.69"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
schemars = "0.8"
okapi = { version = "0.6.0-alpha-1" }
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger"] }
